# agent-communication-protocol

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/L3/: L3.ipynb
src/L4/: L4.ipynb
src/L5/: L5.ipynb
src/L6/: L6.ipynb
src/L7/: L7.ipynb
src/L8/: L8.ipynb
